terraform/modules/app/main.tf
resource "google_compute_instance" "app" {
	name = "reddit-app"
	machine_type = "g1-small"
	zone = "${var.zone}"
	tags = ["reddit-app", "allow-80"]
	
	boot_disk {
		initialize_params { image = "${var.app_disk_image}" }
	}
	
	network_interface {
		network = "default"
		access_config {
		nat_ip = "${google_compute_address.app_ip.address}"
		}
	}
	
	metadata = {
		ssh-keys = "testuser:${file(var.public_key_path)}"
	}
}

resource "google_compute_address" "app_ip" { name = "reddit-app-ip" }

resource "google_compute_firewall" "firewall_puma" {
	name = "allow-puma-default"
	network = "default"
	
	allow {
		protocol = "tcp"
		ports = ["9292"]
	}
	
	source_ranges = ["0.0.0.0/0"]
	target_tags = ["reddit-app"]
}

resource "google_compute_firewall" "allow_port_80" {
	name = "allow-port-80"
	network = "default"
	
	allow {
		protocol = "tcp"
		ports = ["80"]
	}
	
	source_ranges = ["0.0.0.0/0"]
	target_tags = ["allow-80"]
}
